--- a/installation/Vagrantfile
+++ b/installation/Vagrantfile
@@ -10,6 +10,10 @@ Vagrant.configure(2) do |config|
 
   config.vm.network "private_network", ip: "192.168.33.20"
 
+  ## the BRASSCOMMS layer runs on 5000; this allows you to access it from
+  ## outside the guest machine, which is convenient.
+  config.vm.network "forwarded_port", guest: 5000, host: 5000
+
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "4096"
     vb.name = "cmu-mars"
@@ -17,7 +21,7 @@ Vagrant.configure(2) do |config|
 
  $script = <<-SCRIPT
   sudo apt-get install software-properties-common -y --force-yes
-  sudo apt-add-repository ppa:ansible/ansible -y 
+  sudo apt-add-repository ppa:ansible/ansible -y
   sudo apt-get update -y
   sudo apt-get install ansible -y --force-yes
   sudo apt-get install -f
@@ -35,40 +39,43 @@ Vagrant.configure(2) do |config|
   sudo apt-get update
   sudo apt-get install openjdk-8-jre-headless -y --force-yes
   sudo apt-get install xserver-xorg-video-dummy
+  sudo apt-get -y install python-flask
+  sudo apt-get -y install python-enum
+  sudo apt-get -y install emacs
   SCRIPT
 
   config.vm.provision "shell", inline: $script, privileged: false
-  
+
   config.vm.provision "shell" do |s|
     s.inline = "cp -r /vagrant/catkin_ws /home/vagrant"
 	s.name = "Copy the base programs for CP1"
 	s.privileged = false
   end
-  
+
    config.vm.provision "shell" do |s|
     s.inline = "cp /vagrant/setup-cp1.sh /home/vagrant"
 	s.name = "Copy the setup script"
 	s.privileged = false
   end
-  
+
    config.vm.provision "shell" do |s|
     s.inline = "cp -r /vagrant/run-cp1.sh /home/vagrant"
 	s.name = "Copy the CP1 run script"
 	s.privileged = false
   end
-  
+
   config.vm.provision "shell" do |s|
     s.inline = "cp -r /vagrant/xorg.conf /home/vagrant"
 	s.name = "Copy the X config file for use by headless robot"
 	s.privileged = false
   end
-  
+
   $setup = <<-SETUP
   echo Setting up challenge problem 1
   ./setup-cp1.sh
   echo "source catkin_ws/devel/setup.bash" >> .bashrc
   SETUP
-  
+
   config.vm.provision "shell", inline: $setup, privileged: false
-  
+
 end
