--- a/installation/Vagrantfile
+++ b/installation/Vagrantfile
@@ -42,7 +42,8 @@ Vagrant.configure(2) do |config|
   echo "source /opt/ros/indigo/setup.bash" >> ~/.bashrc
   source ~/.bashrc
   source /opt/ros/indigo/setup.bash
-##  echo "export LD_LIBRARY_PATH=~/customlibs/:\$LD_LIBRARY_PATH" >> ~/.bashrc
+  echo "export LD_LIBRARY_PATH=~/das/prism-4.3.1-linux64/lib/:\$LD_LIBRARY_PATH" >> ~/.bashrc
+  #done in script echo "export ROS_LOG_DIR=/test" >> ~/.bashrc
   sudo rosdep init
   sudo rosdep fix-permissions
   rosdep update
@@ -101,7 +102,11 @@ Vagrant.configure(2) do |config|
 	s.privileged = false
   end
 
-
+  config.vm.provision "shell" do |s|
+    s.inline = "cp -r /vagrant/bin /home/vagrant/"
+	s.name = "Copy binaries for recalibration"
+	s.privileged = false
+  end
 
   $setup = <<-SETUP
 
@@ -118,11 +123,4 @@ Vagrant.configure(2) do |config|
 	s.name = "Copy the custom libraries (Kinect, Joints, Power Sim) to the deployment"
 	s.privileged = false
   end
-
-  config.vm.provision "shell" do |s|
-    s.inline = "cp -r /vagrant/bin /home/vagrant/"
-	s.name = "Copy binaries for recalibration"
-	s.privileged = false
-  end
-
 end
