--- a/installation/catkin_ws/src/brasscomms/package.xml
+++ b/installation/catkin_ws/src/brasscomms/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The brasscomms package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="vagrant@todo.todo">vagrant</maintainer>
@@ -45,6 +45,8 @@
   <run_depend>roslib</run_depend>
   <run_depend>rospy</run_depend>
 
+  <build_depend>mars_notifications</build_depend>
+  <run_depend>mars_notifications</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
